--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
 	"description": "Stripe integration for WordPress",
 	"scripts": {
 		"wp-env": "wp-env",
-		"composer": "wp-env run cli --env-cwd=wp-content/plugins/stripe-wp composer",
-		"build": "wp-scripts build",
+		"composer": "wp-env run --env-cwd=wp-content/plugins/stripe-wp cli composer",
+		"composer:test": "wp-env run --env-cwd=wp-content/plugins/stripe-wp tests-wordpress composer",
+		"build": "wp-scripts build --webpack-copy-php --webpack-src-dir=blocks/src --output-path=blocks/build",
 		"check-engines": "wp-scripts check-engines",
 		"check-licenses": "wp-scripts check-licenses",
 		"format": "wp-scripts format",
 		"format:php": "wp-env run --env-cwd='/var/www/html/wp-content/plugins/stripe-wp' cli composer format",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
-		"lint:php": "wp-env run --env-cwd='/var/www/html/wp-content/plugins/stripe-wp' cli composer lint",
+		"lint:php": "npm run composer lint",
 		"lint:md:docs": "wp-scripts lint-md-docs",
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
 		"start": "wp-scripts start",
 		"test:e2e": "wp-scripts test-e2e",
-		"test:php": "wp-env run --env-cwd=wp-content/plugins/stripe-wp tests-wordpress composer phpunit",
+		"test:php": "npm run composer:test phpunit",
 		"test:unit": "wp-scripts test-unit-js",
 		"prepare": "husky install"
 	},
