Linting for PHP files.

--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -7,7 +7,7 @@
 	<exclude-pattern>/vendor/</exclude-pattern>
 	<exclude-pattern>/node_modules/</exclude-pattern>
 	<exclude-pattern>./index.php</exclude-pattern>
-	<exclude-pattern>*.min.js</exclude-pattern>
+	<exclude-pattern>build</exclude-pattern>
 
 	<!-- How to scan -->
 	<!-- Usage instructions: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Usage -->
@@ -34,7 +34,7 @@
 			<property name="prefixes" type="array">
 				<element value="StripeWP"/>
 				<element value="swp"/>
-				<!-- For tests/bootstrap.php -->
+				<!-- For tests/integration/bootstrap.php -->
 				<element value="WP_TESTS"/>
 			</property>
 		</properties>
@@ -43,7 +43,6 @@
 	<rule ref="WordPress-Docs" />
 	<rule ref="WordPress.WP.I18n">
 		<properties>
-			<!-- Value: replace the text domain used. -->
 			<property name="text_domain" type="array" value="stripe-wp" />
 		</properties>
 	</rule>
@@ -53,9 +52,9 @@
 		</properties>
 	</rule>
 	<rule ref="WordPress.WP.GlobalVariablesOverride">
-		<exclude-pattern>./tests/*Test\.php</exclude-pattern>
+		<exclude-pattern>./tests</exclude-pattern>
 	</rule>
 	<rule ref="WordPress.Files.FileName">
-		<exclude-pattern>./tests/*Test\.php</exclude-pattern>
+		<exclude-pattern>./tests</exclude-pattern>
 	</rule>
 </ruleset>
