--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@playwright/test": "^1.39.0",
+		"@types/node": "^20.8.7",
 		"@wordpress/env": "^8.10.0",
 		"@wordpress/scripts": "^26.15.0",
 		"husky": "^8.0.3",
