--- a/package.json
+++ b/package.json
@@ -49,11 +49,14 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@playwright/test": "^1.39.0",
+		"@testing-library/jest-dom": "^6.1.4",
+		"@testing-library/react": "^14.0.0",
 		"@types/node": "^20.8.7",
 		"@wordpress/e2e-test-utils-playwright": "^0.12.0",
 		"@wordpress/env": "^8.10.0",
 		"@wordpress/scripts": "^26.15.0",
 		"husky": "^8.0.3",
+		"jest": "^29.7.0",
 		"lint-staged": "^15.0.2",
 		"npm-run-all": "^4.1.5"
 	}
