--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "wp-scripts format",
 		"format:php": "npm run composer format",
 		"lint:css": "wp-scripts lint-style",
-		"lint:js": "wp-scripts lint-js",
+		"lint:js": "wp-scripts lint-js --fix",
 		"lint:php": "npm run composer lint",
 		"lint:md:docs": "wp-scripts lint-md-docs",
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
