--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
 		"jest": "^29.7.0",
 		"lint-staged": "^15.0.2",
 		"npm-run-all": "^4.1.5"
+	},
+	"dependencies": {
+		"classnames": "^2.3.2"
 	}
 }
